--- a/Views/Inventario/Index.cshtml
+++ b/Views/Inventario/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model One_Vision.Utils.Paginacion<One_Vision.Models.Producto>
 
 @{
-    ViewData["Title"] = "One Vision";
+    ViewData["Title"] = "Inventario";
 }
 
 <div id="productos-container">
