--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,19 +22,26 @@
                 One Vision
             </div>
             <div class="list-group list-group-flush">
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="list-group-item list-group-item-action text-white">
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="list-group-item list-group-item-action text-white d-flex align-items-center">
                     <i class="bi bi-house-door me-2"></i> Inicio
                 </a>
-                <a asp-area="" asp-controller="Home" asp-action="Vision" class="list-group-item list-group-item-action text-white">
+                <a asp-area="" asp-controller="Home" asp-action="Vision" class="list-group-item list-group-item-action text-white d-flex align-items-center">
                     <i class="bi bi-eye me-2"></i> Visión
                 </a>
-                <a asp-area="" asp-controller="PuntoVenta" asp-action="Index" class="list-group-item list-group-item-action text-white">
+                <a asp-area="" asp-controller="PuntoVenta" asp-action="Index" class="list-group-item list-group-item-action text-white d-flex align-items-center">
                     <i class="bi bi-shop me-2"></i> Punto de venta
                 </a>
-                <a asp-area="" asp-controller="Inventario" asp-action="Index" class="list-group-item list-group-item-action text-white">
+                <a asp-area="" asp-controller="Historial" asp-action="Index" class="list-group-item list-group-item-action text-white d-flex align-items-center">
+                    <i class="bi bi-file-medical me-2"></i> Historial Clínico
+                </a>
+                <a asp-area="" asp-controller="Inventario" asp-action="Index" class="list-group-item list-group-item-action text-white d-flex align-items-center">
                     <i class="bi bi-box-seam me-2"></i> Inventario
                 </a>
+                <a asp-area="" asp-controller="Configuracion" asp-action="Index" class="list-group-item list-group-item-action text-white d-flex align-items-center">
+                    <i class="bi bi-gear me-2"></i> Configuración
+                </a>
             </div>
+
         </nav>
 
         <!-- Page Content -->
