--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                 <a asp-area="" asp-controller="Inventario" asp-action="Index" class="list-group-item list-group-item-action text-white d-flex align-items-center">
                     <i class="bi bi-box-seam me-2"></i> Inventario
                 </a>
-                <a asp-area="" asp-controller="Configuracion" asp-action="Index" class="list-group-item list-group-item-action text-white d-flex align-items-center">
+                <a asp-area="" asp-controller="Usuarios" asp-action="ConfigUsuario" class="list-group-item list-group-item-action text-white d-flex align-items-center">
                     <i class="bi bi-gear me-2"></i> Configuración
                 </a>
             </div>
